# framework_doc2mark

./: .env  .gitignore  Pipfile  README.md  app.py  doc_extraction.py  md_generator.py  pyproject.toml  text2speech.py
spliter_doc/: split.py
spliter_doc/md_docs/: output_1.md  output_2.md
